[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geos-xml-tools"
version = "0.6.0"
description = "Tools for enabling advanced xml features in GEOSX"
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
]
license = {text = "LGPL-2.1"}

requires-python = ">=3.8"

dependencies = [
    "lxml>=4.5.0",
    "parameterized",
    "numpy"
]

[project.scripts]
    preprocess_xml = "geos.xml_tools.main:preprocess_serial"
    format_xml = "geos.xml_tools.xml_formatter:main"
    test_geosx_xml_tools = "geos.xml_tools.tests.test_manager:main"
    check_xml_attribute_coverage = "geos.xml_tools.attribute_coverage:main"
    check_xml_redundancy = "geos.xml_tools.xml_redundancy_check:main"
