[metadata]
name = geos_ats
version = 0.2.0
description = ATS implementation for GEOS testing
author = GEOS Contributors
author_email = sherman27@llnl.gov
license = LGPL-2.1

[options]
packages =
    geos_ats
    geos_ats.helpers
    geos_ats.machines
install_requires =
    h5py
    mpi4py
    numpy
    lxml
    tabulate
    pyyaml
    tqdm
    requests
    google-cloud-storage
    ats @ https://github.com/LLNL/ATS/archive/refs/tags/7.0.105.tar.gz
python_requires = >=3.7

[options.entry_points]
console_scripts =
    run_geos_ats = geos_ats.main:main
    setup_ats_environment = geos_ats.environment_setup:main
    geos_ats_log_check = geos_ats.helpers.log_check:main
    geos_ats_restart_check = geos_ats.helpers.restart_check:main
    geos_ats_curve_check = geos_ats.helpers.curve_check:main
