[metadata]
name = mesh_doctor
version = 0.1.0
description = Mesh doctor
author = Gazzolab
author_email = thomas.gazzola@totalenergies.com
license = LGPL-2.1

[options]
packages =
    mesh_doctor
    mesh_doctor.checks
    mesh_doctor.parsing
    mesh_doctor.tests
install_requires =
    vtk >= 9.1
    networkx >= 2.4
    tqdm
    numpy
python_requires = >=3.7

[options.entry_points]
console_scripts =
    mesh_doctor = mesh_doctor.main:test
