[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdf5-wrapper"
version = "0.2.0"
description = "Simple wrapper for h5py objects"
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
]
license = {text = "LGPL-2.1"}

requires-python = ">=3.8"

dependencies = [
    "h5py>=2.10.0",
    "numpy>=1.16.2",
]

[project.scripts]
    hdf5_wrapper_tests = "geos.hdf5_wrapper.wrapper_tests:main"


[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.10"
#exclude = [] 
# strict = true

warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
warn_unused_configs = true

# Overrides for currently untyped modules
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

