[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeos-tools"
version = "0.1.0"
description = "Tools for interacting with pygeosx"
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.8"

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "mpi4py",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
console_output_style = "count"
pythonpath = [".", "src"]
python_classes = "Test"
python_files = "test*.py"
python_functions = "test*"
testpaths = ["tests"]
norecursedirs = "bin"
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["geos"]

