[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygeos_tools*"]

[project]
name = "pygeos-tools"
version = "0.2.0"
description = "Tools for interacting with pygeosx"
maintainers = [
    {name = "Christopher Sherman", email = "sherman27@llnl.gov" },
    {name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" }
]
license = {text = "LGPL-2.1"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.8"

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "mpi4py",
    "vtk",
    "pyevtk",
    "xmltodict",
    "h5py",
    "segyio",
    "numba"
]

[project.urls]
Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
