[metadata]
name = time_history_plotting
version = 0.1.0
description = Scripts to plot time-series data from GEOSX time-history output files
author = William Tobin
author_email = tobin6@llnl.gov
license = LGPL-2.1

[options]
packages =
    timehistory
install_requires =
    matplotlib
    h5py
    numpy
python_requires = >=3.6
